# gemma-rs

./: .gitignore  AGENTS.md  Cargo.toml  PARITY_CHECKLIST.md  README.md
.github/workflows/: parity.yml  perf.yml
crates/gemma-cli/: Cargo.toml
crates/gemma-cli/src/: main.rs  serve.rs
crates/gemma-compression/: Cargo.toml
crates/gemma-compression/src/: compress.rs  int_format.rs  lib.rs  nuq.rs  sfp.rs  types.rs
crates/gemma-compression/tests/: compress_basic.rs  int_format_parity.rs  nuq_parity.rs  sfp_parity.rs
crates/gemma-core/: Cargo.toml
crates/gemma-core/src/: activations.rs  api_client.rs  api_server.rs  attention.rs  bench.rs  c_api.rs  configs.rs  flash_attention.rs  gemma.rs  gemma_args.rs  gpu_inference.rs  kv_cache.rs  lib.rs  model_store.rs  tensor_info.rs  tokenizer.rs  vit.rs  weights.rs
crates/gemma-core/tests/: attention_parity.rs  generation_controls.rs  minimal_inference.rs  model_store_roundtrip.rs  tensor_registry_shapes.rs  tokenizer_parity.rs
crates/gemma-evals/: Cargo.toml
crates/gemma-evals/src/: main.rs
crates/gemma-fetch/: Cargo.toml
crates/gemma-fetch/src/: huggingface.rs  kaggle.rs  lib.rs  main.rs  util.rs
crates/gemma-gpu/: Cargo.toml  build.rs
crates/gemma-gpu/examples/: gpu_bench.rs
crates/gemma-gpu/src/: backend.rs  cpu.rs  gemma.rs  lib.rs
crates/gemma-gpu/src/cuda/: backend.rs  buffers.rs  mod.rs
crates/gemma-gpu/src/cuda/kernels/: decompress.cu  elementwise.cu  gelu_gate.cu  matvec.cu  mod.rs  reduce_max.cu  rms_norm.cu  rope.cu  softmax.cu
crates/gemma-gpu/tests/: cpu_backend_basic.rs  cuda_backend_basic.rs
crates/gemma-io/: Cargo.toml
crates/gemma-io/src/: blob_store.rs  fields.rs  io.rs  lib.rs
crates/gemma-io/tests/: blob_store_roundtrip.rs  fields_golden.rs
crates/gemma-ops/: Cargo.toml
crates/gemma-ops/src/: dot.rs  lib.rs  matmul.rs  nn.rs  sum.rs
crates/gemma-ops/tests/: matmul_perf.rs  nn_basic.rs  ops_basic.rs
crates/gemma-threading/: Cargo.toml
crates/gemma-threading/src/: lib.rs
crates/gemma-util/: Cargo.toml
crates/gemma-util/src/: allocator.rs  args.rs  basics.rs  lib.rs  mat.rs  threading.rs  threading_context.rs  topology.rs  zones.rs
docs/: PORTING_PLAN.md  README.md  USER_GUIDE.md
docs/phases/: PHASE_A.md  PHASE_B.md  PHASE_C.md  PHASE_D.md
reports/parity/: README.md  sampling-envelope-20260218T224920Z.md  sampling-envelope-20260219T001501Z.md  sampling-envelope-20260219T012434Z.md  sampling-envelope-20260219T013724Z.md  sampling-envelope-latest.md  text-parity-20260218T224003Z.md  text-parity-20260219T001501Z.md  text-parity-20260219T012200Z.md  text-parity-20260219T013324Z.md  text-parity-20260219T013531Z.md
reports/perf/: README.md  baseline-20260218T115321Z.md  baseline-20260218T144531Z.md  baseline-20260218T144605Z.md  latest-summary.tsv  latest.md
scripts/parity/: prompts.txt  run_sampling_envelope.sh  run_text_parity.sh  sampling_configs.tsv  sampling_prompts.txt
scripts/perf/: run_baseline.sh
