[package]
name = "gemma-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
gemma-core = { path = "../gemma-core" }
gemma-gpu = { path = "../gemma-gpu", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
gpu = ["gemma-core/gpu", "dep:gemma-gpu"]
cuda = ["gpu", "gemma-gpu/cuda"]
