[package]
name = "gemma-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2"
thiserror = { workspace = true }
directories = "5"
dotenvy = "0.15"
flate2 = "1"
tar = "0.4"
