[package]
name = "gemma-util"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
half = { workspace = true }
getrandom = { workspace = true }
gemma-compression = { path = "../gemma-compression" }
gemma-io = { path = "../gemma-io" }
libc = { workspace = true }
gemma-threading = { path = "../gemma-threading" }
